# sgr-anonymizer-txt

./: .gitignore  LICENSE  README.md  llm_client.py  pyproject.toml  test_random_5_fixed.py
sgr_anonymizer/: __init__.py  core_sgr_fixed.py  model_loader.py  test.py  utils.py
sgr_anonymizer/schemas/: __init__.py  address.py  bank_card.py  birth_date.py  contextual_address.py  contextual_bank_card.py  contextual_birth_date.py  contextual_email_words.py  contextual_fio.py  contextual_inn.py  contextual_passport.py  contextual_phone_words.py  contextual_snils.py  email.py  family.py  fio.py  inn.py  ip.py  passport.py  phone_digits.py  phone_words.py  snils.py
sgr_anonymizer/utils/: __init__.py
